# gen-napi

./: .eslintignore  .eslintrc.cjs  .gitignore  .goreleaser.yaml  .prettierrc  .prettierrc.cjs  CMakeLists.txt  README.md  buffer_issue.cjs  bun_bench.ts  bun_demo.ts  bun_repro.cjs  demo.ts  gen_napi.yaml  global.d.ts  go.mod  go.sum  main.go  node_bench.cjs  node_demo.cjs  node_works.cjs  package.json  tensor.cjs  test.ts  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: goreleaser.yml
cmd/: root.go
config/: config.go
demo1/: ForcedLogic.cc  TensorBase.h
demo1/js/: gen_Tensor_methods_shim.cjs  gen_enums.cjs  index.cjs  tensor.cjs
demo1/ts/: gen_Tensor_methods_shim.ts  gen_enums.ts  index.ts  tensor.ts
demo2/: BasicLogic.h
demo2/ts/: index.ts
napi/: config.go  constants.go  generator.go  init_napi_value.go  package_generator.go  parse_hardcoded_logic.go  parse_header.go  parse_utils.go  type_helpers.go  type_utils.go  write.go  write_arg_transforms.go  write_bindings.go  write_error_handlers.go  write_handlers.go  write_header.go  write_headers.go  write_js_wrapper.go  write_napi_helpers.go  write_native_method.go  write_return_transforms.go  write_sigs.go  write_ts_helpers.go  write_type_conversion.go
test/: ForcedLogic.cc  TensorBase.h  bindings.cc  bindings.h  enums.test.ts
test/js/: index.cjs  index.js  index.ts  tensor.cjs  tensor.ts
test/ts/: index.ts  tensor.ts
test2/: BasicLogic.h
test2/ts/: index.ts
utils/: index.ts
